# lateral_flow_assay_LFA

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  config.yaml  generate1.py  inference.py  pyproject.toml  requirements.txt  segmentation_ROI.py  setup.py  training.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  test.yml
archive/unetpp/: generate_with_UNETpp.py  training_logs.csv
docs/: CHANGELOG.md  README.md  UNET.md  api.md  configuration.md  core.md  data.md  testing.md  training.md  usage.md
docs/UNET/: segmentation_ROI.md  training.md
docs/UNET++/: segmentation_ROIpp.md
docs/core/: apply_mask.md  generate1.md
docs/project context/: file_structure.txt  gaps_in_implementation.md
docs/utils/: dataset.md  inference.md  main.md  utils.md
lfa/config/: default_config.yaml  training_config.yaml
lfa/core/: analysis.py  mask_application.py  mask_generation.py
lfa/utils/: data_utils.py  image_utils.py  logging_utils.py
scripts/: analyze_results.py  apply_masks.py  generate_masks.py  run_tests.py  train.py
src/: apply_mask.py  generate1.py  generate_fasterrcnn.py  generate_maskrcnn.py  main.py  utils.py
src/UNET/: segmentation_ROI.py  training.py
src/UNET++/: pp_training.py  segmentation_ROIpp.py
src/core/: apply_mask.py  generate1.py  generate_with_UNET++.py  generate_with_UNET.py
src/utils/: analyze_masks.py  inference.py
tests/test_core/: test_analysis.py  test_mask_application.py  test_mask_generation.py
tests/test_models/: test_unet.py
tests/test_utils/: test_data_utils.py  (+2 more)
(+6 files in other folders)
